# security-use

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/security-scan/: action.yml
.github/workflows/: ci.yml  publish.yml
ci-templates/: github-actions.yml  gitlab-ci.yml  jenkins-pipeline.groovy
docs/: configuration.md  iac-rules.md  quickstart.md
src/securescan/: __init__.py  cli.py  dependency_scanner.py  iac_scanner.py  osv_client.py  reporter.py  scanner.py
src/securescan/iac/: __init__.py  base.py  cloudformation.py  terraform.py
src/securescan/parsers/: __init__.py  pipfile.py  poetry_lock.py  pyproject.py  requirements.py
src/security_use/: __init__.py  cli.py  dependency_scanner.py  iac_scanner.py  init.py  models.py  osv_client.py  reporter.py  scanner.py
src/security_use/auth/: __init__.py  client.py  config.py  oauth.py
src/security_use/compliance/: __init__.py  mapper.py  models.py
src/security_use/fixers/: __init__.py  dependency_fixer.py  iac_fixer.py
src/security_use/iac/: __init__.py  base.py  cloudformation.py  terraform.py
src/security_use/parsers/: __init__.py  base.py  composer.py  conda.py  dotnet.py  gradle.py  maven.py  npm.py  pipfile.py  poetry_lock.py  pyproject.py  requirements.py  yarn.py
src/security_use/sbom/: __init__.py  generator.py  models.py
src/security_use/scanners/: __init__.py  dependency_scanner.py  iac_scanner.py
src/security_use/sensor/: __init__.py  alert_queue.py  circuit_breaker.py  config.py  dashboard_alerter.py  detector.py  endpoint_analyzer.py  middleware.py  models.py  webhook.py
tests/: __init__.py  test_cli.py  test_compliance.py  test_fixers.py  test_iac_fixer.py  test_iac_parsers.py  test_iac_rules.py  test_init.py  test_osv_client.py  test_parsers.py  test_reporter.py  test_sbom_enrich.py  test_scanner.py  test_sensor.py
(+11 files in other folders)
